Added my name instead of site name

--- a/day1.html
+++ b/day1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h2 id="site-name"> Site Name</h2>
+        <h2 id="site-name"> Himanshu Kumar</h2>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
